--- a/rickAndMorty/src/app/shared/components/header/header.component.html
+++ b/rickAndMorty/src/app/shared/components/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" routerLink="/"
-      >RickandMorty<span class="text-danger">APP</span></a
+      >RickAndMorty<span class="text-danger">APP</span></a
     >
     <button
       class="navbar-toggler"
