--- a/rickAndMorty/src/styles.scss
+++ b/rickAndMorty/src/styles.scss
@@ -4,9 +4,9 @@
   transition: all 0.2 ease-in-out;
   box-sizing: border-box;
   margin: 10px auto 10px auto;
-  max-width: 400px;
-  width: 350px;
-  background-color: white;
+  max-width: 250px;
+  width: 250px;
+  background-color: #171a4a;
   &:hover {
     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.24);
     cursor: pointer;
@@ -31,10 +31,25 @@
   visibility: visible;
 }
 
+.img-card{
+  border-radius: 0.5rem 0 0 0.5em !important;
+}
+
 html,
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
   height: 100%;
   scroll-behavior: smooth;
+  a:link,
+  a:visited,
+  a:active {
+    text-decoration: none;
+    color: white;
+  }
+
+  a:focus,
+  a:hover {
+    color: rgb(255, 152, 0);
+  }
 }
