--- a/rickAndMorty/src/styles.scss
+++ b/rickAndMorty/src/styles.scss
@@ -53,3 +53,12 @@ body {
     color: rgb(255, 152, 0);
   }
 }
+
+.text-info {
+  font-weight: 500;
+  font-family: -apple-system, "BlinkMacSystemFont", "Segoe UI", "Roboto",
+    "Helvetica", "Arial", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol";
+  font-size: 1.7em;
+  color: white !important;
+}
