--- a/reactiveForms/src/app/app.component.html
+++ b/reactiveForms/src/app/app.component.html
@@ -1,2 +1,9 @@
-
-<h2>Lazy Links</h2>
+<div class="container">
+  <div class="header-title">
+    <h1 class="title-form">Practicing With Reactive Forms</h1>
+    <h3 class="title-form">Which One Do You Want To Try?</h3>
+  </div>
+  <div class="options">
+    <div class="option-selected"><router-outlet></router-outlet></div>
+  </div>
+</div>
