--- a/reactiveForms/src/app/app.component.scss
+++ b/reactiveForms/src/app/app.component.scss
@@ -1,1 +1,16 @@
+.container {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin-top: 40px;
+}
 
+.title-form {
+  font-weight: 800;
+  font-family: -apple-system, "BlinkMacSystemFont", "Segoe UI", "Roboto", "Helvetica", "Arial", sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 2.25rem;
+  &:hover {
+    color: rgb(255, 152, 0) !important;
+  }
+}
