--- a/reactiveForms/src/app/app.component.html
+++ b/reactiveForms/src/app/app.component.html
@@ -1,9 +1,3 @@
 <div class="container">
-  <div class="header-title">
-    <h1 class="title-form">Practicing With Reactive Forms</h1>
-    <h3 class="title-form">Which One Do You Want To Try?</h3>
-  </div>
-  <div class="options">
-    <div class="option-selected"><router-outlet></router-outlet></div>
-  </div>
+  <router-outlet></router-outlet>
 </div>
