--- a/reactiveForms/src/app/app.component.html
+++ b/reactiveForms/src/app/app.component.html
@@ -1,3 +1,14 @@
 <div class="container">
-  <router-outlet></router-outlet>
+  <div>
+    <h1 class="title-form">Practicing With Reactive Forms</h1>
+    <h3 class="title-form">Which One Do You Want To Try?</h3>
+  </div>
+  <div class="options">
+    <div class="option" routerLink="reactive-form/basic">
+      <p class="card-text">Basic<br />Form<br />Reactive</p>
+    </div>
+    <div class="option" routerLink="reactive-form/full">
+      <p class="card-text">Full<br />Form<br />Reactive</p>
+    </div>
+  </div>
 </div>
