--- a/reactive-forms/src/app/layout/layout.component.html
+++ b/reactive-forms/src/app/layout/layout.component.html
@@ -4,7 +4,7 @@
     <div class="info-card" routerLink="/basic">
       <h2 class="text">BASIC<br />REACTIVE<br />FORM</h2>
     </div>
-    <div class="info-card">
+    <div class="info-card" routerLink="/full">
       <h2 class="text">FULL<br />REACTIVE<br />FORM</h2>
     </div>
   </div>
