--- a/reactive-forms/src/app/full-form/full-form.component.html
+++ b/reactive-forms/src/app/full-form/full-form.component.html
@@ -1,1 +1,109 @@
-<p>full-form works!</p>
+<div class="full-container">
+  <h1 class="title-text">FULL FORM</h1>
+  <div class="full-form">
+    <form (ngSubmit)="onSubmit()" [formGroup]="fullForm" class="form">
+      <div class="full-form-info">
+        <mat-form-field appearance="fill">
+          <mat-label>First name</mat-label>
+          <input matInput name="firstName" formControlName="firstName" />
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Last name</mat-label>
+          <input matInput formControlName="lastName" />
+        </mat-form-field>
+      </div>
+
+      <div class="full-form-info">
+        <mat-form-field appearance="fill">
+          <mat-label>Deparment</mat-label>
+          <input
+            matInput
+            placeholder="Ex. San Salvador"
+            formControlName="deparment"
+          />
+        </mat-form-field>
+        <div
+          class="required-message"
+          *ngIf="fullForm.get('deparment')?.touched && fullForm.get('deparment')?.errors?.['required']"
+        >
+          This Field is Required
+        </div>
+        <mat-form-field appearance="fill">
+          <mat-label>City</mat-label>
+          <input matInput placeholder="Ex. Soyapango" formControlName="city" />
+        </mat-form-field>
+        <div
+          class="required-message"
+          *ngIf="fullForm.get('city')?.touched && fullForm.get('city')?.errors?.['required']"
+        >
+          This Field is Required
+        </div>
+      </div>
+      <mat-form-field appearance="fill">
+        <mat-label>Email</mat-label>
+        <input
+          matInput
+          placeholder="Ex. people@gmail.com"
+          formControlName="email"
+        />
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>Password</mat-label>
+        <input
+          matInput
+          [type]="hide ? 'password' : 'text'"
+          formControlName="password"
+        />
+        <mat-icon matSuffix (click)="hide = !hide">{{
+          hide ? "visibility_off" : "visibility"
+        }}</mat-icon>
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>Address</mat-label>
+        <textarea matInput formControlName="address"></textarea>
+      </mat-form-field>
+      <div class="radio-options">
+        <mat-label class="text">Choose You Gender</mat-label>
+        <mat-radio-group class="options" formControlName="gender">
+          <mat-radio-button value="female">Female</mat-radio-button>
+          <mat-radio-button value="male">Male</mat-radio-button>
+          <mat-radio-button value="others">Others</mat-radio-button>
+        </mat-radio-group>
+      </div>
+      <div class="full-form-info">
+        <mat-form-field appearance="fill">
+          <mat-label>Telephone</mat-label>
+          <input type="tel" formControlName="phone" matInput placeholder="2257 - 7777" />
+        </mat-form-field>
+
+        <section class="check-age">
+          <mat-checkbox formControlName="age"><h2 class="options">ARE YOU OVER 18 ?</h2></mat-checkbox>
+        </section>
+      </div>
+    </form>
+
+    <div class="btn-container">
+      <button
+        *ngIf="fullForm.valid"
+        type="submit"
+        class="btn-full-form"
+        (click)="onSubmit(); openSnackBar()"
+      >
+        Submit
+      </button>
+      <button
+        *ngIf="!fullForm.valid"
+        type="submit"
+        class="btn-full-form"
+        (click)="requiredSnackBar()"
+      >
+        Send
+      </button>
+    </div>
+  </div>
+  <div>
+    <button class="return-back" routerLink="/">
+      <mat-icon>arrow_back</mat-icon>Return
+    </button>
+  </div>
+</div>
