--- a/reactive-forms/src/app/layout/layout.component.scss
+++ b/reactive-forms/src/app/layout/layout.component.scss
@@ -1,11 +1,3 @@
-.title-text {
-  font-weight: 800;
-  font-family: -apple-system, "BlinkMacSystemFont", "Segoe UI", "Roboto", "Helvetica", "Arial", sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  text-align: center;
-  text-transform: uppercase;
-}
-
 .card-option {
   display: flex;
   gap: 30px;
@@ -23,8 +15,9 @@
   }
   .text {
     font-weight: 700;
-    font-family: -apple-system, "BlinkMacSystemFont", "Segoe UI", "Roboto", "Helvetica", "Arial", sans-serif,
-      "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-family: -apple-system, "BlinkMacSystemFont", "Segoe UI", "Roboto",
+      "Helvetica", "Arial", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+      "Segoe UI Symbol";
     display: flex;
     justify-content: center;
     height: 100%;
@@ -35,5 +28,17 @@
     &:hover {
       font-weight: 800;
     }
+  }
+}
+
+.pop {
+  margin-top: 200px;
+  a{
+    text-decoration: none;
+    color: white;
+    font-weight: 700;
+    font-family: -apple-system, "BlinkMacSystemFont", "Segoe UI", "Roboto",
+      "Helvetica", "Arial", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+      "Segoe UI Symbol";
   }
 }
