todo list finish

--- a/todo-list/src/app/home/home.component.html
+++ b/todo-list/src/app/home/home.component.html
@@ -57,7 +57,7 @@
     </div>
   </div>
   <div *ngIf="showNoActiveTasksMessage" class="no-tasks-message">
-    no hay tareas activas
+    no active tasks
   </div>
 
   <div class="button-line"></div>
@@ -84,7 +84,7 @@
       </div>
     </div>
     <div *ngIf="showNoCompleteMessage" class="no-tasks-message">
-      no hay tareas completadas
+      no complete tasks
     </div>
   </div>
 </div>
