--- a/todo-list/src/styles.scss
+++ b/todo-list/src/styles.scss
@@ -8,11 +8,18 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
   background-color: #314657;
 
-  ul{
+  ul {
     padding: 0;
   }
 
-  li{
+  li {
     list-style: none;
+  }
+
+  .error-snackbar {
+    text-transform: capitalize;
+    background: #dd2130;
+    color: black;
+    font-weight: bold;
   }
 }
